# goit-pythonweb-hw-10.

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 14113d688904_updated_contacts_and_added_user_model.py  6480903b31ec_added_verified_column.py  6d4f622fa2f1_contacts_user_added_new_column.py  b39827657267_init.py
src/: schemas.py
src/api/: 1.py  auth_router.py  contacts.py  users.py
src/conf/: config.py
src/database/: models.py  seed_contacts.py
src/jwt/: auth.py  models.py
src/repository/: contacs.py
src/services/: auth.py  contacts.py  users.py
src/utils/: auth.py  tokens.py
